# node_actix

./: .gitignore  .npmignore  Cargo.toml  README.md  README_ES.md  bun.lockb  default.nix  flake.nix  index.d.ts  index.js  package-lock.json  package.json
.github/benches/: benchmark_cache.json  index.js
.github/benches/express/: index.js  package-lock.json  package.json
.github/benches/fastify/: index.js  package-lock.json  package.json
.github/workflows/: CI.yml  bench.yml  checks.yml
examples/: basic.mjs
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/http/: body.rs  executor.rs  mod.rs  net.rs  server.rs
