[package]
edition = "2021"
name = "node-actix"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
actix-web = "4.5.1"
futures = "0.3.30"
matchit = "0.8.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = { version = "2.12.2", default-features = false }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
