[package]
edition = "2021"
name = "node-actix"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
astra = "0.3.0"
futures = "0.3.30"
futures-core = "0.3.30"
hyper = { version = "0.14", features = ["http1", "server", "stream"] }
matchit = "0.8.0"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = { version = "2.12.2", default-features = false }
num_cpus = "1.16.0"
tokio = { version = "1.37.0", features = ["full", "tracing"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
